[metadata]
name = pyfltk-helpers
version = 0.0.1
author = David McNab
author_email = davidmcnabnz@gmail.com
license = BSD
license_files = LICENSE
description = Provide tools to simplify management of PyFLTK GUI layouts
keywords = GUI, FLTK, PyFLTK
url = https://github.com/erdewit/pyfltk-helpers
long_description = file: README.md
long_description_content_type = text/x-markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
py_modules = fltkHelpers
python_requires = >=3.5

